kubernetes/old/frontend-net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: frontend-net
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/frontend-net: 'true'
  podSelector:
    matchLabels:
      io.kompose.network/frontend-net: 'true'
